@@ -15,4 +15,18 @@ class TestPipe < Test::Unit::TestCase
       r.close
     end
   end
+
+  def test_write
+    bug2559 = '[ruby-core:27425]'
+    a, b = IO.pipe
+    begin
+      a.close
+      assert_raises(Errno::EPIPE, bug2559) do
+        b.write("hi")
+      end
+    ensure
+      a.close if !a.closed?
+      b.close if !b.closed?
+    end
+  end
 end
